Correcting CSS z-index error.

--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,6 @@ header {
 	margin: 0;
 	padding: 0;
 	padding-top: 64px;
-	z-index: -2;
 }
 
 table.image {
